Bug 39378 - Words are cutoff in the Modifiers section for Online Orders on Firefox and Internet Explorer

--- a/skins/weborder/css/modifiers.css
+++ b/skins/weborder/css/modifiers.css
@@ -103,26 +103,28 @@
 }
 
 .modifiers_table .modifier span.title_wrapper {
-    line-height: 1.4em;
     display: inline-block;
     float: left;
+    line-height: 1.4em;
     width: 120px;
 }
 
 .modifiers_table .modifier span.title {
-    line-height: 1.4em;
     display: inline-block;
     float: left;
+    line-height: 1.4em;
     max-width: 100%;
     word-break: normal;
     word-wrap: break-word;
 }
+/* Fix for IE and FF. Bug 39378, 34207 */
+html:not(.ua-webkit) .modifiers_table .modifier span.title {
+    width: 78px;
+}
 
 .modifiers_table .modifier span.info {
     position: relative; /* need for Tooltip */
-    display: inline-block;
-    height: 1.4em;
-    line-height: 1.4em;
+    margin: 0 3px;
 }
 
 .modifiers_table .modifier span.info::before {
@@ -247,6 +249,7 @@ span.tooltip {
     -webkit-transition: opacity .2s ease-out;
     -o-transition: opacity .2s ease-out;
     transition: opacity .2s ease-out;
+    word-break: break-word;
 }
 
 span.tooltip:before {
